# neural_triangulation

./: .gitignore  pyproject.toml
experiments/datasets/ground_truth/: gsdc_ground_truth.csv  novtel_static_ground_truth.csv  skydel_simulated_ground_truth.csv
experiments/datasets/preprocessed/: gsdc_dataset.pkl  novtel_preprocessed.pkl  skydel_simulated_data.pkl
experiments/datasets/rinex/gsdc/: gnss_obs.rnx
experiments/dynamic/: comparisn_for_dynamic.ipynb
experiments/dynamic/results/: enu_error_along_trajectory.csv  enu_error_table.csv
experiments/simulated/: monte_carlo_runs_100I.ipynb  monte_carlo_runs_25I.ipynb  monte_carlo_runs_50I.ipynb
experiments/simulated/results/: enu_errors_50I.csv  error_summary_100I.csv  error_summary_25I.csv
experiments/simulated/results/100I/: enu_errors_by_algorithm.csv
experiments/simulated/results/50I/: enu_errors.csv
experiments/stationery/: comparisn_for_stationery.ipynb
experiments/stationery/results/: enu_error_along_trajectory.csv  error_table.csv
src/ntraingulation/: __init__.py
src/ntraingulation/adaptive_kalman_filter/: __init__.py  aekf.py
src/ntraingulation/dynamics_model/: __init__.py  constant_velocity_triangulation_model.py
src/ntraingulation/error_models/: errors.py
src/ntraingulation/monte_carlo_runs/: __init__.py  estimators.py  run_monte_carlo_sim.py
src/ntraingulation/residuals_analysis/: __init__.py  errors.py
src/ntraingulation/transforms/: __init__.py  coordinate_transforms.py  enu_error.py
src/ntraingulation/weighted_least_squares/: __init__.py  wls.py  wls_triangulator.py
(+1 files in other folders)
