[project]
name = "ntraingulation"
version = "0.1.0"
description = "A Neural Network Aided Triangulation"
readme = "README.md"
authors = [
    { name = "hades", email = "nischalbhattaraipi@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "diffkalman[cu124]>=0.1.0",
    "filterpy>=1.4.5",
    "pandas>=2.2.3",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]

[project.scripts]
ntraingulation = "ntraingulation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
